kubernetes/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: initialisation_service
  name: initialisation_service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: initialisation_service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: initialisation_service
    spec:
      containers:
      - image: beaware/initialisation_service:IMAGE_TAG
        imagePullPolicy: Always
        name: initialisation_service
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
