kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: initialisation-service
  name: initialisation-service
spec:
  selector:
    app: initialisation-service
  ports:
    - name: http
    port: 7855
    protocol: TCP
targetPort: 2355
